--- a/css/PagInicial.css
+++ b/css/PagInicial.css
@@ -3,9 +3,12 @@
     padding: 0%;
 }
 
-/* body{
-    display: flex;
-    flex-direction: row;
+body{
+    background-color: #010006;
+    background-image: url(./background.jpg);
+    background-size:83vw 100vh;
+    background-position: center top;
+    background-repeat: no-repeat;
 }
 
 /* The Modal (background) */
