--- a/css/PagInicial.css
+++ b/css/PagInicial.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "04B30";
+    src: url(/CorporationGamesStraight.otf) format('truetype');
+}
+
 *{
     margin: 0%;
     padding: 0%;
@@ -14,6 +19,18 @@ body {
     justify-content: center;
     align-items: center;
     background: #000;
+}
+
+h1{
+    font-family: '04B30';
+    position: absolute;
+    color: #98a1f3;
+    top: 20%;
+    left: 42%;
+    font-size: 70px;
+    text-shadow: 10px 10px 10px black;
+    -webkit-text-stroke-width: 0.8px;
+    -webkit-text-stroke-color: #000;
 }
 
 .basebg {
@@ -44,14 +61,19 @@ body {
     position: absolute;
     left: 40%;  
     text-align: center; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white; 
     text-decoration: none; 
-    font-size: 20px; 
+    font-size: 30px; 
     background-color: rgb(0, 6, 27); 
     border-radius: 10px; 
     width: 100%; 
     height: 13%;
     transition: background-color 0.3s ease;
+    font-family: "04B30";
+    border: none;
 }
 
 .linkplay {
