--- a/css/PagInicial.css
+++ b/css/PagInicial.css
@@ -55,21 +55,26 @@ h1{
     position: relative;
     top: -8rem;
 }
-
-.linkFase1, 
+ 
 .linkFase2,
 .linkFase3,
 .linkFase4  {
+    z-index: 10;
     position: absolute;  
     font-size: 10px; 
     background-color: rgba(2, 20, 37, 0.986); 
     border-radius: 100%; 
     transition: background-color 0.3s ease;
     color: #00000000;
-    z-index: 10;
 }
 
 .linkFase1{
+    z-index: 10;
+    position: absolute;  
+    font-size: 10px; 
+    background-color: rgba(2, 20, 37, 0); 
+    border-radius: 100%; 
+    transition: background-color 0.3s ease;
     top: 51%;
     left: 35%; 
     width: 17%; 
@@ -101,8 +106,24 @@ h1{
 .linkFase2:hover,
 .linkFase3:hover,
 .linkFase4:hover {
-    background-color: rgba(11, 4, 77, 0.253);
+    background-color: rgba(3, 1, 22, 0.253);
 } 
+
+.cadeado {
+    font-size: 50px;
+    margin-right: 8px;
+    color: red;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.bloqueado .cadeado {
+    display: inline-block;
+}
+
+.desbloqueado .cadeado {
+    display: none;
+}
 
 #pluto,
 #mercurio,
@@ -110,8 +131,9 @@ h1{
 #netuno{
     position: absolute;
     width: 17%;
-    z-index: 1;
+    z-index: 5;
 }
+
 
 #pluto{
     top: 7%;
@@ -170,20 +192,21 @@ h1{
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 1000;
+    display: none; 
+    position: fixed; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
 }
   
 /* Modal Content/Box */
   .modal-content {
+    z-index: 1000;
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
