--- a/css/PagInicial.css
+++ b/css/PagInicial.css
@@ -211,6 +211,7 @@ h1{
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
+    height:80% ;
     width: 80%; /* Could be more or less, depending on screen size */
 }
   
@@ -233,6 +234,113 @@ h1{
     margin-left: 50%;
     width: 20%;
     height: 20%;
+}
+
+.fases {
+    display: none;
+}
+/* personalização do modal principal  */
+#guia-cont {
+    width: 888px;
+    background-color: #464242;
+    color: #f0f0f0;
+    border-radius: 40px;
+    background-image: url(backgroundfases.jpg);
+    background-size: cover;
+    background-repeat: repeat-x;
+    background-color: #888;
+    border: 8px solid rgba(6, 102, 212, 0.103);
+    border-radius: 20px;
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    width: 70%;
+    height: 50%; 
+    font: 25pt;
+    
+    #text_guia{
+        font-size: 19px;
+    }
+}
+/* estilos dos modais das perguntas  */
+#fase-1{
+    background-image: url(background/marte.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #888;
+    background-color: #464242;
+    color: #160d0d;
+    border-radius: 40px;
+    width: 888px;
+    border: 8px solid rgba(6, 102, 212, 0.103);
+    border-radius: 20px;
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    width: 70%;
+    height: 50%; 
+    font: 25pt;
+}
+#fase-2{
+    background-image: url(background/pluto.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #888;
+    background-color: #464242;
+    color: #1d0e0e;
+    border-radius: 40px;
+    width: 70%;
+    border: 8px solid rgba(6, 102, 212, 0.103);
+    border-radius: 20px;
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    height:90% ;
+    font: 25pt;
+}
+#fase-3{
+    background-image: url(background/netuno.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #888;
+    background-color: #464242;
+    color: #160f0f;
+    border-radius: 40px;
+    width: 888px;
+    border: 8px solid rgba(6, 102, 212, 0.103);
+    border-radius: 20px;
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    width: 70%;
+    height: 50%; 
+    font: 25pt;
+}
+#fase-4{
+    background-image: url(background/mercurio.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #888;
+    background-color: #464242;
+    color: #1a1414;
+    border: 8px solid rgba(6, 102, 212, 0.103);
+    border-radius: 20px;
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    width: 70%;
+    height: 50%; 
+    font: 25pt;
+}
+.quiz-conteiner{
+    border-radius: 20px;
+    z-index: 1000;
+    background-color: #fefefe00;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+;
 }
 
 /* Tamanho de tela pequeno */
@@ -275,111 +383,4 @@ h1{
         width: 280px;
         padding: 38px;
     }
-}
-
-.fases {
-    display: none;
-}
-/* personalização do modal principal  */
-#guia-cont {
-    width: 888px;
-    background-color: #464242;
-    color: #f0f0f0;
-    border-radius: 40px;
-    background-image: url(backgroundfases.jpg);
-    background-size: cover;
-    background-repeat: repeat-x;
-    background-color: #888;
-    border: 8px solid rgba(6, 102, 212, 0.103);
-    border-radius: 20px;
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    width: 70%;
-    height: 50%; 
-    font: 25pt;
-    
-    #text_guia{
-        font-size: 19px;
-    }
-}
-/* estilos dos modais das perguntas  */
-#fase-1{
-    background-image: url(background/marte.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #888;
-    background-color: #464242;
-    color: #f0f0f0;
-    border-radius: 40px;
-    width: 888px;
-    border: 8px solid rgba(6, 102, 212, 0.103);
-    border-radius: 20px;
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    width: 70%;
-    height: 50%; 
-    font: 25pt;
-}
-#fase-2{
-    background-image: url(background/pluto.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #888;
-    background-color: #464242;
-    color: #f0f0f0;
-    border-radius: 40px;
-    width: 888px;
-    border: 8px solid rgba(6, 102, 212, 0.103);
-    border-radius: 20px;
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    width: 70%;
-    height: 50%; 
-    font: 25pt;
-}
-#fase-3{
-    background-image: url(background/netuno.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #888;
-    background-color: #464242;
-    color: #f0f0f0;
-    border-radius: 40px;
-    width: 888px;
-    border: 8px solid rgba(6, 102, 212, 0.103);
-    border-radius: 20px;
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    width: 70%;
-    height: 50%; 
-    font: 25pt;
-}
-#fase-4{
-    background-image: url(background/mercurio.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #888;
-    background-color: #464242;
-    color: #f0f0f0;
-    border: 8px solid rgba(6, 102, 212, 0.103);
-    border-radius: 20px;
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    width: 70%;
-    height: 50%; 
-    font: 25pt;
-}
-.quiz-content{
-    border-radius: 20px;
-    z-index: 1000;
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; 
 }
