--- a/css/PagInicial.css
+++ b/css/PagInicial.css
@@ -313,7 +313,7 @@ h1{
     top: 5%;
     left: 15%;
     width: 70%;
-    height: 50%; 
+    height: 90%%; 
     font: 25pt;
 }
 #fase-4{
@@ -329,7 +329,7 @@ h1{
     top: 5%;
     left: 15%;
     width: 70%;
-    height: 50%; 
+    height: 90%; 
     font: 25pt;
 }
 .quiz-conteiner{
